feat: add Base chain support with optimistic oracle and spoke pool
- Added Base Sepolia (84532) and Base Mainnet (8453) to hardhat.config.ts
- Implemented ComCeloOptimisticOracle.sol: bonded assertions with challenge period
  - Assertion creation with minimum bond requirement
  - Challenge mechanism with evidence submission
  - Oracle resolution with bond slashing on disputes
- Implemented ComCeloBaseSpokePool.sol: cross-chain transfer bridge
  - Cross-chain transfers with automatic fee calculation
  - Relayer network for multi-hop verification
  - Settlement period enforcement (1 hour default)
  - Emergency withdrawal functions
- Created deployment script (deploy-base.ts) for Base chain
- Updated lib/contracts.ts with multi-chain support (4 networks, 24 contracts)
- Added Base RPC URLs and Basescan API configuration
- Expanded .env.example with all Base-specific configuration
- Added comprehensive test suite (155 tests passing)

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,44 @@
+# Deployment Configuration
 DEPLOYER_KEY=your_private_key_here
+
+# Celo Network Configuration
 CELO_RPC_ALFAJORES=https://alfajores-forno.celo-testnet.org
 CELO_RPC_MAINNET=https://forno.celo.org
 CELOSCAN_API_KEY=your_celoscan_api_key_here
+
+# Base Network Configuration
+BASE_RPC_SEPOLIA=https://sepolia.base.org
+BASE_RPC_MAINNET=https://mainnet.base.org
+BASESCAN_API_KEY=your_basescan_api_key_here
+
+# Frontend Configuration
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_NETWORK_ID=celoAlfajores
+
+# Core Game Contracts
 NEXT_PUBLIC_GAME_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+NEXT_PUBLIC_MATCHMAKER_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+NEXT_PUBLIC_TREASURY_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+NEXT_PUBLIC_UNITS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 NEXT_PUBLIC_RELAY_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+
+# Feature Contracts
+NEXT_PUBLIC_ITEMS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+NEXT_PUBLIC_SEASONS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+NEXT_PUBLIC_TOURNAMENTS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+NEXT_PUBLIC_ACHIEVEMENTS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+NEXT_PUBLIC_RANKING_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+NEXT_PUBLIC_QUESTS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+NEXT_PUBLIC_REWARDS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+
+# Base-Specific Contracts
+NEXT_PUBLIC_ORACLE_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+NEXT_PUBLIC_SPOKE_POOL_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+
+# Farcaster Configuration
+NEXT_PUBLIC_FRAME_URL=https://comcelo.vercel.app
+NEXT_PUBLIC_FARCASTER_HUB_URL=https://hub.pinata.cloud
+
+# Analytics (Optional)
+NEXT_PUBLIC_ANALYTICS_ID=
+
