feat: Add Base mainnet integration with contract hooks and relayer service
- Updated lib/contracts.ts with deployed Base mainnet addresses
- Created useItems hook for Items contract interaction
- Created useMetaTxRelay hook for gasless transactions
- Built relayer service backend for meta-transaction execution
- Added create-initial-items.ts script (15 items across rarities)
- Added approve-relayer.ts script for relayer approval
- Updated .env.example with Base mainnet config and relayer settings
- Created comprehensive INTEGRATION_GUIDE.md documentation

Contract addresses on Base Mainnet:
- Items: 0xBf1D587fc5f00aBA65671ab575eD5225D3342e13
- MetaTxRelay: 0x6E69f9c92070c3381D7Aebbb07842b682d500011
- CrossChainRewards: 0x4C73a992c2f52a74E67A2424b800Cf97359ab694
- Governance: 0x6736103c7a528E658895c541F89E47F250c98a4f

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ BASESCAN_API_KEY=your_basescan_api_key_here
 
 # Frontend Configuration
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
-NEXT_PUBLIC_NETWORK_ID=celoAlfajores
+NEXT_PUBLIC_NETWORK_ID=base
 
 # Core Game Contracts
 NEXT_PUBLIC_GAME_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
@@ -22,13 +22,14 @@ NEXT_PUBLIC_TREASURY_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 NEXT_PUBLIC_UNITS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 NEXT_PUBLIC_RELAY_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 NEXT_PUBLIC_SESSION_MANAGER_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
-NEXT_PUBLIC_GOVERNANCE_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+NEXT_PUBLIC_GOVERNANCE_CONTRACT_ADDRESS=0x6736103c7a528E658895c541F89E47F250c98a4f
 NEXT_PUBLIC_PLAYER_STATS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 NEXT_PUBLIC_ANTI_CHEAT_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
-NEXT_PUBLIC_CROSS_CHAIN_REWARDS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+NEXT_PUBLIC_CROSS_CHAIN_REWARDS_CONTRACT_ADDRESS=0x4C73a992c2f52a74E67A2424b800Cf97359ab694
 
 # Feature Contracts
-NEXT_PUBLIC_ITEMS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+NEXT_PUBLIC_ITEMS_CONTRACT_ADDRESS=0xBf1D587fc5f00aBA65671ab575eD5225D3342e13
+NEXT_PUBLIC_META_TX_RELAY_CONTRACT_ADDRESS=0x6E69f9c92070c3381D7Aebbb07842b682d500011
 NEXT_PUBLIC_SEASONS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 NEXT_PUBLIC_TOURNAMENTS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 NEXT_PUBLIC_ACHIEVEMENTS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
@@ -39,6 +40,12 @@ NEXT_PUBLIC_REWARDS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 # Base-Specific Contracts
 NEXT_PUBLIC_ORACLE_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 NEXT_PUBLIC_SPOKE_POOL_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+
+# Relayer Service Configuration
+RELAYER_PRIVATE_KEY=your_relayer_private_key_here
+RELAYER_PORT=3001
+RELAYER_MAX_GAS_PRICE=100
+RELAYER_MIN_BALANCE=0.1
 
 # Farcaster Configuration
 NEXT_PUBLIC_FRAME_URL=https://comcelo.vercel.app
