fix: upgrade wagmi v3 compatibility and add WagmiProvider setup
- Updated useChainId hook (useNetwork removed in v3)
- Fixed balance.formatted → balance.value conversion
- Added WagmiProvider with QueryClientProvider wrapper
- Created app/providers.tsx component for layout integration
- Fixed bigint type conversions in useItems
- Stubbed unimplemented contract methods (marketplace, relayer rewards)
- Added 'use client' to pages needing React hooks
- Updated tsconfig: added lib paths, baseUrl, excluded test/scripts
- Fixed signMessage to be async (ethers v6)
- Updated getFeeData usage for gas price (ethers v6)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,10 @@
     "target": "es2020",
     "module": "commonjs",
     "moduleResolution": "node",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    },
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
@@ -33,11 +37,14 @@
     "contracts",
     "types",
     "app",
+    "lib",
     "pages",
     "next-env.d.ts",
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "scripts",
+    "test"
   ]
 }
