--- a/package.json
+++ b/package.json
@@ -15,25 +15,29 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.5",
+    "@tanstack/react-query": "^5.90.12",
+    "@wagmi/core": "^3.0.1",
     "ethers": "^6.10.0",
     "next": "^14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "viem": "^2.43.3",
+    "wagmi": "^3.1.3"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@types/node": "^20.10.4",
+    "@types/react": "^18.2.39",
+    "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "dotenv": "^16.3.1",
-    "hardhat": "^2.22.3",
-    "prettier": "^3.1.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
-    "@types/react": "^18.2.39",
-    "@types/react-dom": "^18.2.17"
+    "hardhat": "^2.22.3",
+    "prettier": "^3.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
