--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "next:start": "next start",
     "ci:build": "next build --no-lint",
     "test:watch": "hardhat test --watch",
-    "clean": "rm -rf .next dist cache artifacts"
+    "clean": "rm -rf .next dist cache artifacts",
+    "deploy:core": "hardhat run scripts/deploy-core.ts",
+    "deploy:features": "hardhat run scripts/deploy-features.ts",
+    "deploy:base": "hardhat run scripts/deploy-base.ts",
+    "deploy:all": "hardhat run scripts/deploy-all.ts"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.5",
