--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "deploy:core": "hardhat run scripts/deploy-core.ts",
     "deploy:features": "hardhat run scripts/deploy-features.ts",
     "deploy:base": "hardhat run scripts/deploy-base.ts",
-    "deploy:all": "hardhat run scripts/deploy-all.ts"
+    "deploy:all": "hardhat run scripts/deploy-all.ts",
+    "deploy:stacks": "ts-node scripts/deploy-stacks.ts",
+    "interact:auto:evm": "hardhat run scripts/interact-auto.ts",
+    "interact:auto:stacks": "TS_NODE_TRANSPILE_ONLY=1 TARGET=stacks ts-node scripts/interact-auto.ts"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.5",
@@ -29,7 +32,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "viem": "^2.43.3",
-    "wagmi": "^3.1.3"
+    "wagmi": "^3.1.3",
+    "@stacks/transactions": "^7.0.1",
+    "@stacks/network": "^7.0.0"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
