feat(base): add ComCeloBaseSimple contract address and deployment tracking

--- a/.env.example
+++ b/.env.example
@@ -38,8 +38,15 @@ NEXT_PUBLIC_QUESTS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 NEXT_PUBLIC_REWARDS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 
 # Base-Specific Contracts
+NEXT_PUBLIC_BASE_SIMPLE_CONTRACT_ADDRESS=0x3D071744510628a1afB3052Ca1492aD25A92afd8
 NEXT_PUBLIC_ORACLE_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 NEXT_PUBLIC_SPOKE_POOL_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+
+# Stacks Configuration
+STACKS_PRIVATE_KEY=your_stacks_private_key_here
+STACKS_NETWORK=mainnet
+STACKS_CONTRACT_NAME=comcelo
+STACKS_CONTRACT_ADDRESS=
 
 # Relayer Service Configuration
 RELAYER_PRIVATE_KEY=your_relayer_private_key_here
