--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ BASESCAN_API_KEY=your_basescan_api_key_here
 # Frontend Configuration
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 NEXT_PUBLIC_NETWORK_ID=base
+NEXT_PUBLIC_WC_PROJECT_ID=your_walletconnect_project_id_here
 
 # Core Game Contracts
 NEXT_PUBLIC_GAME_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
