--- a/package.json
+++ b/package.json
@@ -24,17 +24,22 @@
     "interact:auto:stacks": "TS_NODE_TRANSPILE_ONLY=1 TARGET=stacks ts-node scripts/interact-auto.ts"
   },
   "dependencies": {
+    "@base-org/account": "^2.4.2",
+    "@coinbase/wallet-sdk": "^4.3.7",
     "@openzeppelin/contracts": "^4.9.5",
+    "@stacks/network": "^7.0.0",
+    "@stacks/transactions": "^7.0.1",
     "@tanstack/react-query": "^5.90.12",
     "@wagmi/core": "^3.0.1",
+    "@walletconnect/ethereum-provider": "^2.21.10",
+    "@walletconnect/modal": "^2.7.0",
     "ethers": "^6.10.0",
     "next": "^14.1.0",
+    "porto": "^0.2.37",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "viem": "^2.43.3",
-    "wagmi": "^3.1.3",
-    "@stacks/transactions": "^7.0.1",
-    "@stacks/network": "^7.0.0"
+    "wagmi": "^3.1.3"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
