--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
   "dependencies": {
     "@base-org/account": "^2.4.2",
     "@coinbase/wallet-sdk": "^4.3.7",
+    "@gemini-wallet/core": "^0.3.2",
     "@openzeppelin/contracts": "^4.9.5",
     "@stacks/network": "^7.0.0",
     "@stacks/transactions": "^7.0.1",
     "@tanstack/react-query": "^5.90.12",
-    "@wagmi/core": "^3.0.1",
+    "@wagmi/core": "^2.22.1",
     "@walletconnect/ethereum-provider": "^2.21.10",
     "@walletconnect/modal": "^2.7.0",
     "ethers": "^6.10.0",
@@ -39,7 +40,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "viem": "^2.43.3",
-    "wagmi": "^3.1.3"
+    "wagmi": "^2.19.5"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
