feat: add core utilities, docs, and config improvements (see IMPROVEMENTS_PHASE1.md for details)

--- a/.env.example
+++ b/.env.example
@@ -1,64 +1,186 @@
-# Deployment Configuration
+# ============================================================================
+# ComCelo Environment Configuration
+# ============================================================================
+# This file shows all available configuration options.
+# 
+# MINIMAL SETUP (frontend-only, no deployment):
+# - Copy this file to .env
+# - Set NEXT_PUBLIC_NETWORK_ID (e.g., "baseSepolia")
+# - Optional: Update RPC URLs if defaults are unreliable
+#
+# FULL SETUP (with smart contract deployment):
+# - Set all values below, especially DEPLOYER_KEY and RPC URLs
+# ============================================================================
+
+# ============================================================================
+# BLOCKCHAIN DEPLOYMENT (Required for: npm run deploy:*)
+# ============================================================================
 DEPLOYER_KEY=your_private_key_here
 
-# Celo Network Configuration
+# ============================================================================
+# NETWORK RPC ENDPOINTS (Required for: deployment, tx monitoring)
+# Defaults provided, but you may want to use your own for reliability
+# ============================================================================
+
+# Celo Testnet RPC
 CELO_RPC_ALFAJORES=https://alfajores-forno.celo-testnet.org
+
+# Celo Mainnet RPC
 CELO_RPC_MAINNET=https://forno.celo.org
+
+# Base Testnet RPC
+BASE_RPC_SEPOLIA=https://sepolia.base.org
+
+# Base Mainnet RPC
+BASE_RPC_MAINNET=https://mainnet.base.org
+
+# ============================================================================
+# BLOCKCHAIN EXPLORERS (Required for: contract verification)
+# ============================================================================
+
+# Celoscan API Key - for contract verification
 CELOSCAN_API_KEY=your_celoscan_api_key_here
 
-# Base Network Configuration
-BASE_RPC_SEPOLIA=https://sepolia.base.org
-BASE_RPC_MAINNET=https://mainnet.base.org
+# Basescan API Key - for contract verification
 BASESCAN_API_KEY=your_basescan_api_key_here
 
-# Frontend Configuration
+# ============================================================================
+# FRONTEND CONFIGURATION (Required for: npm run dev, npm run build)
+# ============================================================================
+
+# Base URL for the application
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
+# Active network (options: celoAlfajores, celo, baseSepolia, base)
 NEXT_PUBLIC_NETWORK_ID=base
+
+# WalletConnect Project ID (from https://cloud.walletconnect.com/)
 NEXT_PUBLIC_WC_PROJECT_ID=your_walletconnect_project_id_here
 
-# Core Game Contracts
+# ============================================================================
+# GAME CONTRACTS - CORE LOGIC (Required for: gameplay)
+# Update these with deployed contract addresses
+# ============================================================================
+
+# Main game contract (game state, unit movement, combat)
 NEXT_PUBLIC_GAME_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+
+# Matchmaking and queue logic
 NEXT_PUBLIC_MATCHMAKER_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+
+# Treasury (fee collection, prize distribution)
 NEXT_PUBLIC_TREASURY_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+
+# Unit NFT contract
 NEXT_PUBLIC_UNITS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+
+# Meta-transaction relay for gasless transactions
 NEXT_PUBLIC_RELAY_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+
+# Player session management
 NEXT_PUBLIC_SESSION_MANAGER_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
-NEXT_PUBLIC_GOVERNANCE_CONTRACT_ADDRESS=0x6736103c7a528E658895c541F89E47F250c98a4f
+
+# Player statistics and ranking
 NEXT_PUBLIC_PLAYER_STATS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+
+# Anti-cheat and game integrity
 NEXT_PUBLIC_ANTI_CHEAT_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+
+# ============================================================================
+# GAME CONTRACTS - FEATURES (Optional)
+# These control cosmetics, tournaments, rewards, etc.
+# ============================================================================
+
+# Governance voting
+NEXT_PUBLIC_GOVERNANCE_CONTRACT_ADDRESS=0x6736103c7a528E658895c541F89E47F250c98a4f
+
+# Cross-chain reward distribution
 NEXT_PUBLIC_CROSS_CHAIN_REWARDS_CONTRACT_ADDRESS=0x4C73a992c2f52a74E67A2424b800Cf97359ab694
 
-# Feature Contracts
+# In-game items and cosmetics shop
 NEXT_PUBLIC_ITEMS_CONTRACT_ADDRESS=0xBf1D587fc5f00aBA65671ab575eD5225D3342e13
+
+# Meta-transaction relay (gasless actions)
 NEXT_PUBLIC_META_TX_RELAY_CONTRACT_ADDRESS=0x6E69f9c92070c3381D7Aebbb07842b682d500011
+
+# Seasonal battle passes and progression
 NEXT_PUBLIC_SEASONS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+
+# Tournaments and leaderboards
 NEXT_PUBLIC_TOURNAMENTS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+
+# Achievement tracking
 NEXT_PUBLIC_ACHIEVEMENTS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+
+# Ranking system (ELO, leagues)
 NEXT_PUBLIC_RANKING_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+
+# Quest system
 NEXT_PUBLIC_QUESTS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+
+# Reward distribution system
 NEXT_PUBLIC_REWARDS_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 
-# Base-Specific Contracts
+# ============================================================================
+# BASE CHAIN SPECIFIC (Optional, for Base deployment features)
+# ============================================================================
+
+# Simplified game contract for Base (reduced functionality)
 NEXT_PUBLIC_BASE_SIMPLE_CONTRACT_ADDRESS=0x3D071744510628a1afB3052Ca1492aD25A92afd8
+
+# Optimistic oracle for cross-chain data
 NEXT_PUBLIC_ORACLE_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+
+# Across protocol spoke pool for bridges
 NEXT_PUBLIC_SPOKE_POOL_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 
-# Stacks Configuration
+# ============================================================================
+# STACKS/BITCOIN L2 CONFIGURATION (Optional, if using Stacks)
+# ============================================================================
+
+# Stacks blockchain private key (for contract deployment to Stacks)
 STACKS_PRIVATE_KEY=your_stacks_private_key_here
+
+# Network: mainnet or testnet
 STACKS_NETWORK=mainnet
+
+# Smart contract name on Stacks
 STACKS_CONTRACT_NAME=comcelo
+
+# Contract address on Stacks (auto-populated after first deployment)
 STACKS_CONTRACT_ADDRESS=
 
-# Relayer Service Configuration
+# ============================================================================
+# RELAYER SERVICE CONFIGURATION (Optional, for meta-transaction relayer)
+# ============================================================================
+
+# Private key for relayer service (processes meta-transactions)
 RELAYER_PRIVATE_KEY=your_relayer_private_key_here
+
+# Port the relayer service runs on
 RELAYER_PORT=3001
+
+# Maximum gas price relayer will pay (in Gwei)
 RELAYER_MAX_GAS_PRICE=100
+
+# Minimum balance relayer maintains (in ETH/CELO)
 RELAYER_MIN_BALANCE=0.1
 
-# Farcaster Configuration
+# ============================================================================
+# FARCASTER FRAME CONFIGURATION (For Frame UI integration)
+# ============================================================================
+
+# Base URL for Farcaster frame endpoints
 NEXT_PUBLIC_FRAME_URL=https://comcelo.vercel.app
+
+# Farcaster Hub URL for frame validation
 NEXT_PUBLIC_FARCASTER_HUB_URL=https://hub.pinata.cloud
 
-# Analytics (Optional)
+# ============================================================================
+# ANALYTICS (Optional, for product metrics)
+# ============================================================================
+
+# Analytics tracking ID (Mixpanel, Amplitude, etc.)
 NEXT_PUBLIC_ANALYTICS_ID=
+
 
